<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/l1t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/code_number"
            android:gravity="right"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/l1t2" />

        <TextView
            android:id="@+id/l1t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text=":"
            app:layout_constraintLeft_toRightOf="@+id/l1t1"
            app:layout_constraintRight_toLeftOf="@+id/codeNumberTextView"/>

        <TextView
            android:id="@+id/codeNumberTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="192.168.31.146"
            app:layout_constraintLeft_toRightOf="@+id/l1t2"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/l1">

        <TextView
            android:id="@+id/l1t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/product_name"
            android:gravity="right"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/l1t2" />

        <TextView
            android:id="@+id/l1t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text=":"
            app:layout_constraintLeft_toRightOf="@+id/l1t1"
            app:layout_constraintRight_toLeftOf="@+id/productNameTextView"/>

        <TextView
            android:id="@+id/productNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="192.168.31.146"
            app:layout_constraintLeft_toRightOf="@+id/l1t2"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/l1">

        <TextView
            android:id="@+id/l3t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/price"
            android:gravity="right"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/l3t2" />

        <TextView
            android:id="@+id/l3t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text=":"
            app:layout_constraintLeft_toRightOf="@+id/l3t1"
            app:layout_constraintRight_toLeftOf="@+id/priceTextView"/>

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="192.168.31.146"
            app:layout_constraintLeft_toRightOf="@+id/l3t2"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/l4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/l3">

        <TextView
            android:id="@+id/l4t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/phone_number"
            android:gravity="right"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/l4t2" />

        <TextView
            android:id="@+id/l4t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text=":"
            app:layout_constraintLeft_toRightOf="@+id/l4t1"
            app:layout_constraintRight_toLeftOf="@+id/phoneNumberTextView"/>

        <TextView
            android:id="@+id/phoneNumberTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="192.168.31.146"
            app:layout_constraintLeft_toRightOf="@+id/l4t2"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/l5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/l4">

        <TextView
            android:id="@+id/l5t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/handle_phone_number"
            android:gravity="right"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/l5t2" />

        <TextView
            android:id="@+id/l5t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text=":"
            app:layout_constraintLeft_toRightOf="@+id/l5t1"
            app:layout_constraintRight_toLeftOf="@+id/handlePhoneNumberTextView"/>

        <TextView
            android:id="@+id/handlePhoneNumberTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="192.168.31.146"
            app:layout_constraintLeft_toRightOf="@+id/l5t2"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/l6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/l5">

        <TextView
            android:id="@+id/l6t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/size"
            android:gravity="right"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/l6t2" />

        <TextView
            android:id="@+id/l6t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text=":"
            app:layout_constraintLeft_toRightOf="@+id/l6t1"
            app:layout_constraintRight_toLeftOf="@+id/sizeTextView"/>

        <TextView
            android:id="@+id/sizeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="192.168.31.146"
            app:layout_constraintLeft_toRightOf="@+id/l6t2"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/l7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/l6">

        <TextView
            android:id="@+id/l7t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/number_size"
            android:gravity="right"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/l7t2" />

        <TextView
            android:id="@+id/l7t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text=":"
            app:layout_constraintLeft_toRightOf="@+id/l7t1"
            app:layout_constraintRight_toLeftOf="@+id/numberSizeTextView"/>

        <TextView
            android:id="@+id/numberSizeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="192.168.31.146"
            app:layout_constraintLeft_toRightOf="@+id/l7t2"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/l8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/l7">

        <TextView
            android:id="@+id/l8t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/size_in_square"
            android:gravity="right"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/l8t2" />

        <TextView
            android:id="@+id/l8t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text=":"
            app:layout_constraintLeft_toRightOf="@+id/l8t1"
            app:layout_constraintRight_toLeftOf="@+id/sizeInSquareTextView"/>

        <TextView
            android:id="@+id/sizeInSquareTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="192.168.31.146"
            app:layout_constraintLeft_toRightOf="@+id/l8t2"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/l9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/l8">

        <TextView
            android:id="@+id/l9t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/handler"
            android:gravity="right"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/l9t2" />

        <TextView
            android:id="@+id/l9t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text=":"
            app:layout_constraintLeft_toRightOf="@+id/l9t1"
            app:layout_constraintRight_toLeftOf="@+id/handlerTextView"/>

        <TextView
            android:id="@+id/handlerTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="192.168.31.146"
            app:layout_constraintLeft_toRightOf="@+id/l9t2"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/l10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/l9">

        <TextView
            android:id="@+id/l10t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/original_price"
            android:gravity="right"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/l10t2" />

        <TextView
            android:id="@+id/l10t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text=":"
            app:layout_constraintLeft_toRightOf="@+id/l10t1"
            app:layout_constraintRight_toLeftOf="@+id/originalPriceTextView"/>

        <TextView
            android:id="@+id/originalPriceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="192.168.31.146"
            app:layout_constraintLeft_toRightOf="@+id/l10t2"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/l11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/l10">

        <TextView
            android:id="@+id/l11t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/origin"
            android:gravity="right"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/l11t2" />

        <TextView
            android:id="@+id/l11t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text=":"
            app:layout_constraintLeft_toRightOf="@+id/l11t1"
            app:layout_constraintRight_toLeftOf="@+id/originTextView"/>

        <TextView
            android:id="@+id/originTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="192.168.31.146"
            app:layout_constraintLeft_toRightOf="@+id/l11t2"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/l12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/l11">

        <TextView
            android:id="@+id/l12t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/quantity"
            android:gravity="right"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/l12t2" />

        <TextView
            android:id="@+id/l12t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text=":"
            app:layout_constraintLeft_toRightOf="@+id/l12t1"
            app:layout_constraintRight_toLeftOf="@+id/quantityTextView"/>

        <TextView
            android:id="@+id/quantityTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="192.168.31.146"
            app:layout_constraintLeft_toRightOf="@+id/l12t2"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>